Renomeei algumas classes e adicionei as categorias

--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -29,16 +29,43 @@
     </header>
     <!--  FIM Header  -->
 
-    <section class="categories">
-        <div class="container categories_container">
-            <div class="categories_left">
+    <section class="lixos">
+        <div class="container lixos_container">
+            <div class="lixos_left">
                 <h1>Categorias</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatum cupiditate accusantium tempora! Pariatur ratione quos ipsa tenetur quas. Blanditiis nostrum consequuntur quasi facilis, molestias eius quisquam quidem quam ducimus.</p>
                 <a href="" class="btn">Aprenda Mais Sobre</a>
             </div>
-            <div class="categories_right">
-                <article class="category">
-                    
+            <div class="lixos_right">
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Bateria</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
+                </article>
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Pilha</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
+                </article>
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Celular</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
+                </article>
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Computador</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
+                </article>
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Bateria</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
+                </article>
+                <article class="lixos_categoria">
+                    <span class="lixos_categ_icon"></span>
+                    <h5>Bateria</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
             </div>
         </div>
