--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -29,6 +29,7 @@
     </header>
     <!--  FIM Header  -->
 
+    <!--  INICIO Tipo Lixo  -->
     <section class="lixos">
         <div class="container lixos_container">
             <div class="lixos_left">
@@ -37,38 +38,41 @@
                 <a href="" class="btn">Aprenda Mais Sobre</a>
             </div>
             <div class="lixos_right">
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Bateria</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Pilha</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Celular</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Computador</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
-                    <h5>Bateria</h5>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
+                    <h5></h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
-                <article class="lixos_categoria">
-                    <span class="lixos_categ_icon"></span>
-                    <h5>Bateria</h5>
+                <article class="lixos_tipo">
+                    <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
+                    <h5>Placa Mãe</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
             </div>
         </div>
     </section>
+    <!--  FIM Tipo Lixo  -->
+
+    
 </body>
 </html>
