Finalização das categorias
Hoje finalizei as categorias, renomeei algumas classes e comecei a desenvolver a seção dos maiores produtores de lixo

--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -60,7 +60,7 @@
                 </article>
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
-                    <h5></h5>
+                    <h5>Processador</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
                 <article class="lixos_tipo">
@@ -73,6 +73,28 @@
     </section>
     <!--  FIM Tipo Lixo  -->
 
-    
+    <!-- INICIO Produtores de Lixo Eletrônico-->
+    <section class="produt_lixo">
+        <h2>Maiores Produtoes de Lixo Eletrônico</h2>
+        <div class="container produt_lixo_container">
+            <article class="produtores">
+                <div class="produtores_image">
+                    <img src="">
+                </div>
+                <h4>Estados Unidos</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                </p>
+            </article>
+        </div>
+    </section>
+    <!-- FIM Produtores de Lixo Eletrônico-->
+
+
+
+
+
+    <!--  LINK SCRIPT  -->
+    <script src="/JS/main.js"></script>
 </body>
 </html>
