--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -43,26 +43,31 @@
                     <h5>Bateria</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
+
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Pilha</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
+
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Celular</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
+
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Computador</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
+
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Processador</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, corporis?</p>
                 </article>
+
                 <article class="lixos_tipo">
                     <span class="lixos_categ_icon"><i class="uil uil-battery-empty"></i></span>
                     <h5>Placa Mãe</h5>
@@ -81,10 +86,33 @@
                 <div class="produtores_image">
                     <img src="">
                 </div>
+                <h4>China</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                </p>
+                <a href="" class="btn btn-primary">Gráfico</a>
+            </article>
+
+            <article class="produtores">
+                <div class="produtores_image">
+                    <img src="">
+                </div>
                 <h4>Estados Unidos</h4>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
                 </p>
+                <a href="" class="btn btn-primary">Gráfico</a>
+            </article>
+
+            <article class="produtores">
+                <div class="produtores_image">
+                    <img src="">
+                </div>
+                <h4>Índia</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                </p>
+                <a href="" class="btn btn-primary">Gráfico</a>
             </article>
         </div>
     </section>
