--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -86,40 +86,90 @@
                 <div class="produtores_image">
                     <img src="">
                 </div>
-                <h4>China</h4>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
-                </p>
-                <a href="" class="btn btn-primary">Gráfico</a>
+                <div class="produtores_info">
+                    <h4>China</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                    </p>
+                    <a href="" class="btn btn-primary">Gráfico</a>
+                </div>
             </article>
 
             <article class="produtores">
                 <div class="produtores_image">
                     <img src="">
                 </div>
-                <h4>Estados Unidos</h4>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
-                </p>
-                <a href="" class="btn btn-primary">Gráfico</a>
+                <div class="produtores_info">
+                    <h4>Estados Unidos</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                    </p>
+                    <a href="" class="btn btn-primary">Gráfico</a>
+                </div>
             </article>
 
             <article class="produtores">
                 <div class="produtores_image">
                     <img src="">
                 </div>
-                <h4>Índia</h4>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
-                </p>
-                <a href="" class="btn btn-primary">Gráfico</a>
+                <div class="produtores_info">
+                    <h4>Índia</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi, consectetur architecto blanditiis enim possimus ipsa debitis.
+                    </p>
+                    <a href="" class="btn btn-primary">Gráfico</a>
+                </div>
             </article>
         </div>
     </section>
     <!-- FIM Produtores de Lixo Eletrônico-->
 
+    <!--  INICIO Perguntas Frequentes  -->
+    <section class="faqs">
+        <h2>Perguntas Frequentes</h2>
+        <div class="container faqs_containers">
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>Como eu descarto corretamente o lixo eletrônico</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur sint sapiente animi nisi quod dolores placeat cupiditate vitae assumenda provident, excepturi sed aliquam eius neque minus quas ut totam.
+                    </p>
+                </div>
+            </article>
 
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>Como eu descarto corretamente o lixo eletrônico</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur sint sapiente animi nisi quod dolores placeat cupiditate vitae assumenda provident, excepturi sed aliquam eius neque minus quas ut totam.
+                    </p>
+                </div>
+            </article>
 
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>Como eu descarto corretamente o lixo eletrônico</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur sint sapiente animi nisi quod dolores placeat cupiditate vitae assumenda provident, excepturi sed aliquam eius neque minus quas ut totam.
+                    </p>
+                </div>
+            </article>
+
+            <article class="faq">
+                <div class="faq_icon"><i class="uil uil-plus"></i></div>
+                <div class="question_answer">
+                    <h4>Como eu descarto corretamente o lixo eletrônico</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur sint sapiente animi nisi quod dolores placeat cupiditate vitae assumenda provident, excepturi sed aliquam eius neque minus quas ut totam.
+                    </p>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!--  FIM Perguntas Frequentes  -->
 
 
     <!--  LINK SCRIPT  -->
