Delete FAQ e ADD Resumo

--- a/HTML/lixo_eletro_home.html
+++ b/HTML/lixo_eletro_home.html
@@ -124,9 +124,13 @@
     </section>
     <!-- FIM Produtores de Lixo Eletrônico-->
 
-    <!--  INICIO Perguntas Frequentes  -->
-    
-    <!--  FIM Perguntas Frequentes  -->
+    <!--  INICIO RESUMO ESG E PROJETO  -->
+    <section class="centralizado">
+        <h2>ESG e a E-waste</h2>
+        
+    </section>
+
+    <!--  FIM RESUMO ESG E PROJETO  -->
 
 
     <!--  LINK SCRIPT  -->
